--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,10 @@ dependencies:
   latlong2: ^0.9.1
   flutter_map: ^8.1.1
   geolocator: ^14.0.1
-  sqflite: ^2.4.2
   crypto: ^3.0.6
   path: ^1.9.1
+  sqflite: ^2.4.2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
